--- a/CN/smallpacco.tex
+++ b/CN/smallpacco.tex
@@ -32,8 +32,10 @@
 \newcommand{\pr}{\mathbb{P}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\gr}[1]{\mathbf{#1}}
+\newcommand{\ang}[1]{\langle #1 \rangle}
 \newcommand{\dif}{\mathrm{d}}
 \newcommand{\dx}{\dif x}
+\newcommand{\dt}{\dif t}
 
 
 \newtcolorbox{riquadro}[1][]{enhanced, breakable,frame style={top color=OrangeRed4!60,bottom color=OrangeRed4!80},colback=black!80,coltext=OrangeRed4!50,title=#1,fonttitle=\bfseries,halign title=center,coltitle=black!80}
